--- a/ProyectoPBD/test/fixtures/owners.yml
+++ b/ProyectoPBD/test/fixtures/owners.yml
@@ -4,14 +4,12 @@ one:
   run_own: MyString
   nom_prop: MyString
   apells_prop: MyString
-  tel1_prop: MyString
-  tel2_prop: MyString
+  tel_prop: MyString
   email_prop: MyString
 
 two:
   run_own: MyString
   nom_prop: MyString
   apells_prop: MyString
-  tel1_prop: MyString
-  tel2_prop: MyString
+  tel_prop: MyString
   email_prop: MyString
