--- a/ProyectoPBD/Gemfile
+++ b/ProyectoPBD/Gemfile
@@ -18,6 +18,10 @@ gem 'coffee-rails', '~> 4.0.0'
 #gema para paginas: 404 - 500
 #gem 'exception_handler'
 
+#gema para validar rut
+gem 'rut_validation'
+
+
 #gema para relacionar en modelos
 
 gem 'rmre'
