--- a/ProyectoPBD/test/fixtures/offer_vehicles.yml
+++ b/ProyectoPBD/test/fixtures/offer_vehicles.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id_veh: 1
   id_block: 1
+  run_driv: MyString
   est_oferta_veh: MyString
 
 two:
-  id_veh: 1
   id_block: 1
+  run_driv: MyString
   est_oferta_veh: MyString
