--- a/ProyectoPBD/Gemfile
+++ b/ProyectoPBD/Gemfile
@@ -16,11 +16,13 @@ gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.0.0'
 
 #gema para paginas: 404 - 500
-#gem 'exception_handler'
+gem 'exception_handler'
 
 #gema para validar rut
 gem 'rut_validation'
 
+#gema para heroku
+gem 'rails_12factor'
 
 #gema para relacionar en modelos
 
